fix tagcloud spacing

--- a/app/_sass/_pages.scss
+++ b/app/_sass/_pages.scss
@@ -57,17 +57,50 @@
     max-width: 100%;
 }
 /* subjects */
-.tagcloud0{font-size:0.4em;}
-.tagcloud1{font-size:0.5em;}
-.tagcloud2{font-size:0.8em;}
-.tagcloud3{font-size:1.1em;}
-.tagcloud4{font-size:1.4em;}
-.tagcloud5{font-size:1.6em;}
-.tagcloud6{font-size:1.9em;}
-.tagcloud7{font-size:2.2em;}
-.tagcloud8{font-size:2.5em;}
-.tagcloud9{font-size:2.8em;}
-.tagcloud10{font-size:3.0em;}
+.tagcloud0{
+    font-size:0.4em;
+    line-height: 1em;
+}
+.tagcloud1{
+    font-size:0.5em;
+    line-height: 1em;
+}
+.tagcloud2{
+    font-size:0.8em;
+    line-height: 1em;
+}
+.tagcloud3{
+    font-size:1.1em;
+    line-height: 1em;
+}
+.tagcloud4{
+    font-size:1.4em;
+    line-height: 1em;
+}
+.tagcloud5{
+    font-size:1.6em;
+    line-height: 1em;
+}
+.tagcloud6{
+    font-size:1.9em;
+    line-height: 1em;
+}
+.tagcloud7{
+    font-size:2.2em;
+    line-height: 1em;
+}
+.tagcloud8{
+    font-size:2.5em;
+    line-height: 1em;
+}
+.tagcloud9{
+    font-size:2.8em;
+    line-height: 1em;
+}
+.tagcloud10{
+    font-size:3.0em;
+    line-height: 1em;
+}
 
 /* About */
 .about-nav {
